complete renderer interface for all three methods

--- a/cuda_renderer/Makefile
+++ b/cuda_renderer/Makefile
@@ -1,118 +1,79 @@
-# # Compiler definitions
-# CXX = g++
-# NVCC = nvcc
-# # Target executable name
-# EXECUTABLE = hpc_kmeans_visualization
-# # --- Flags ---
-# # C++ compiler flags: -g for debugging, -Wall for all warnings, -std=c++11 for modern C++
-# CXXFLAGS = -g -Wall -std=c++11
-# # NVCC compiler flags: -g -G for CUDA debugging, -std=c++11 to match C++
-# # Add -arch=sm_XX for your specific GPU architecture for better performance if needed
-# NVCCFLAGS = -g -G -std=c++11 -ccbin g++-11
-# # Linker flags: Link against OpenGL and GLUT libraries.
-# # The CUDA runtime library is added automatically by using nvcc as the linker.
-# LDFLAGS = -lGL -lglut
-# # --- Source and Object Files ---
-# # List all C++ and CUDA source files
-# CPP_SOURCES = main.cpp Image.cpp
-# CUDA_SOURCES = HPCRenderer.cu
-# # Automatically generate object file names (.o) from source file names
-# CPP_OBJECTS = $(CPP_SOURCES:.cpp=.o)
-# CUDA_OBJECTS = $(CUDA_SOURCES:.cu=.o)
-# OBJECTS = $(CPP_OBJECTS) $(CUDA_OBJECTS)
-# # --- Build Rules ---
-# # The default target, "all", which builds the executable.
-# all: $(EXECUTABLE)
-# # Rule to link all object files into the final executable.
-# # We use nvcc for linking to automatically include CUDA runtime libraries.
-# $(EXECUTABLE): $(OBJECTS)
-# 	$(NVCC) $(NVCCFLAGS) -o $@ $(OBJECTS) $(LDFLAGS)
-# 	@echo "Build complete. Run with: ./$(EXECUTABLE) <path_to_image.ppm>"
-# # Rule to compile a C++ source file (.cpp) into an object file (.o).
-# %.o: %.cpp
-# 	$(CXX) $(CXXFLAGS) -c $< -o $@
-# # Rule to compile a CUDA source file (.cu) into an object file (.o).
-# %.o: %.cu
-# 	$(NVCC) $(NVCCFLAGS) -c $< -o $@
-# # --- Utility Rules ---
-# # Rule to clean up the directory by removing object files and the executable.
-# clean:
-# 	rm -f $(OBJECTS) $(EXECUTABLE)
-# 	@echo "Cleanup complete."
 
-# Executable name
-EXEC = kmeans_renderer
+CXX := g++
+NVCC := /usr/local/cuda/bin/nvcc
 
-# Compilers
-CXX = g++
-NVCC = nvcc
+# C++ compiler flags
+CXXFLAGS := -I. -O2 -Wall
 
-# --- Compiler Flags ---
-# CXXFLAGS: Flags for the C++ compiler (g++)
-# -O3: High optimization level
-# -Wall: Enable all warnings
-# -std=c++11: Use the C++11 standard (or c++14, c++17)
-# -fopenmp: Enable OpenMP support
-CXXFLAGS = -O3 -Wall -std=c++11 -fopenmp
+# CUDA compiler flags
+# -dc is for relocatable device code, necessary for linking multiple .cu files
+NVCCFLAGS := -I. -O2 -g -G -std=c++11 -ccbin g++-11
 
-# NVCCFLAGS: Flags for the CUDA compiler (nvcc)
-# -O3: Optimization level
-# -std=c++11: C++ standard for host code
-# -arch=sm_75: Target GPU architecture. CHANGE THIS to match your GPU!
-#             (e.g., sm_61 for a GTX 1070, sm_86 for an RTX 3080)
-# -Xcompiler -fopenmp: Pass the -fopenmp flag to the host compiler (g++)
-NVCCFLAGS = -O3 -std=c++11 -arch=sm_75 -Xcompiler -fopenmp
+# Linker flags
+# Add CUDA runtime library and any other libraries (like OpenGL, GLUT)
+LDFLAGS := -L/usr/local/cuda/lib64 -lcudart -lglut -lGLU -lGL
 
-# --- Linker Flags ---
-# LDFLAGS: Flags passed to the linker
-# -lglut, -lGL, -lGLU: OpenGL libraries
-# -lcudart: CUDA runtime library
-# -fopenmp: OpenMP library (needed for linking too)
-LDFLAGS = -lglut -lGL -lGLU -lcudart -fopenmp
 
-# --- Project Files ---
-# Include directories
-# We need to tell the compiler where to find header files.
-INCLUDES = -I. \
-           -Irenderer_cuda \
-           -Irenderer_openMP \
-           -ISimpleRenderer
+TARGET := kmeans_visualizer
 
-# C++ source files
-CXX_SRCS = main.cpp \
-           Image.cpp
+# Directories
+SRC_DIR_SIMPLE := SimpleRenderer
+SRC_DIR_OMP := renderer_openMP
+SRC_DIR_CUDA := renderer_cuda
 
-# CUDA source files (.cu)
-# NOTE: OpenMPRenderer.cu and HPCRenderer.cu are being compiled with nvcc
-# because of their .cu extension. This works, but they could be .cpp files.
-CUDA_SRCS = renderer_cuda/CUDARenderer.cu \
-            renderer_openMP/OpenMPRenderer.cu \
-            SimpleRenderer/HPCRenderer.cu
+# Source files
+SRCS_CXX := main.cpp Image.cpp Renderer.cpp
+SRCS_NVCC := $(SRC_DIR_SIMPLE)/HPCRenderer.cu \
+             $(SRC_DIR_OMP)/OpenMPrenderer.cu \
+             $(SRC_DIR_CUDA)/CUDARenderer.cu
 
-# Object files are derived automatically from source files
-OBJS = $(CXX_SRCS:.cpp=.o) $(CUDA_SRCS:.cu=.o)
+# Object files (derived from source files)
+OBJS_CXX := $(SRCS_CXX:.cpp=.o)
 
-# --- Build Rules ---
 
-# The default target: build the executable
-all: $(EXEC)
+OBJS_NVCC := $(notdir $(SRCS_NVCC:.cu=.o))
 
-# Rule to link the final executable
-# We use nvcc for linking because it knows how to correctly link CUDA code.
-$(EXEC): $(OBJS)
-	$(NVCC) $(NVCCFLAGS) $(INCLUDES) -o $@ $^ $(LDFLAGS)
+# All object files
+OBJS := $(OBJS_CXX) $(OBJS_NVCC)
+
+
+all: $(TARGET)
+
+# Linking rule for the final executable
+$(TARGET): $(OBJS)
+	@echo "--- Linking all object files ---"
+	# The final link step must use nvcc to handle device code
+	$(NVCC) $(NVCCFLAGS) -o $(TARGET) $(OBJS) $(LDFLAGS)
+
+
 
 # Rule to compile a .cpp file into a .o file
 %.o: %.cpp
-	$(CXX) $(CXXFLAGS) $(INCLUDES) -c $< -o $@
+	@echo "Compiling C++: $<"
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-# Rule to compile a .cu file into a .o file
-# This single rule correctly handles files in subdirectories.
-%.o: %.cu
-	$(NVCC) $(NVCCFLAGS) $(INCLUDES) -c $< -o $@
+# Rule to compile a .cu file from the SimpleRenderer directory
+%.o: $(SRC_DIR_SIMPLE)/%.cu
+	@echo "Compiling CUDA: $<"
+	$(NVCC) $(NVCCFLAGS) -c $< -o $@
 
-# Rule to clean up the project directory
+# Rule to compile a .cu file from the renderer_openMP directory
+%.o: $(SRC_DIR_OMP)/%.cu
+	@echo "Compiling CUDA: $<"
+	$(NVCC) $(NVCCFLAGS) -c $< -o $@
+
+# Rule to compile a .cu file from the renderer_cuda directory
+%.o: $(SRC_DIR_CUDA)/%.cu
+	@echo "Compiling CUDA: $<"
+	$(NVCC) $(NVCCFLAGS) -c $< -o $@
+
+
 clean:
-	rm -f $(EXEC) $(OBJS)
+	@echo "--- Cleaning up project files ---"
+	rm -f $(TARGET) $(OBJS)
 
 .PHONY: all clean
+
+
+
+
